[metadata]
name = gpio-toggler-rony
version = 0.0.1
author = Md. Rashedul Amin Rony
author_email = md.rashedul.amin@gmail.com
description = Get and input pin and change the output based on the input state
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/rony-13/gpio-toggler
project_urls =
    Bug Tracker = https://github.com/rony-13/gpio-toggler/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: Linux OS

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.8

[options.packages.find]
where = src
